@@ -1,10 +1,11 @@
 Imports System
 Imports System.Windows.Forms
 Imports System.Drawing
+Imports Microsoft.Win32
 
 Public Class B2SScreen
 
-    Private ReadOnly FileName As String = Registry.CurrentUser.OpenSubKey("Software\B2S").GetValue("B2SScreenResFileNameOverride", "ScreenRes.txt")
+    Private ReadOnly FileName As String = Microsoft.Win32.Registry.CurrentUser.OpenSubKey("Software\B2S").GetValue("B2SScreenResFileNameOverride", "ScreenRes.txt")
 
     Public formBackglass As formBackglass = Nothing
     Public formDMD As formDMD = Nothing
@@ -104,6 +105,7 @@ Public Class B2SScreen
             Dim i As Integer = 0
             Do Until EOF(1)
                 line(i) = LineInput(1)
+                If (line(i).StartsWith("#")) Then Continue Do
                 i += 1
             Loop
             line(i) = 0
