@@ -1,6 +1,8 @@
 1.3.1.1
 
 - Its now possible to use a different filename than ScreenRes.txt via the registry-key "Software\B2S\B2SScreenResFileNameOverride"
+- Also skip lines starting with "#" when reading the ScreenRes.txt or TableName.res files in the dll version
+- The DMD form has to be in front of the grill when it is a part of the Backglass, for mixed 2 and 3 screen backglasses
 
 
 1.3.1.0
